# ai-traffic-chalan

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-render.txt  requirements.txt
deploy/: nginx.conf
traffic_ai/: __init__.py
traffic_ai/ai/: __init__.py  demo_analyzer.py  pipeline.py
traffic_ai/ai/ocr/: __init__.py  plate_ocr.py
traffic_ai/ai/signal_controller/: __init__.py  engine.py
traffic_ai/ai/speed_detection/: __init__.py  estimator.py
traffic_ai/ai/vehicle_detection/: __init__.py  detector.py
traffic_ai/ai/vehicle_tracking/: __init__.py  tracker.py
traffic_ai/ai/violation/: __init__.py  detector.py
traffic_ai/api/: __init__.py  main.py  schemas.py
traffic_ai/api/routes/: demo.py  health.py  ops.py  signal.py
traffic_ai/camera/: __init__.py  stream.py
traffic_ai/challan/: __init__.py  service.py
traffic_ai/config/: __init__.py  classes.yaml  settings.py
traffic_ai/dashboard/: .gitkeep  dashboard.css  dashboard.js  index.html
traffic_ai/database/: __init__.py  models.py  session.py
traffic_ai/models/weights/: .gitkeep
traffic_ai/utils/: __init__.py  demo.py  io.py  logger.py  types.py
traffic_ai/workers/: celery_app.py
